loader text issues fixed on mobile devices

--- a/style.css
+++ b/style.css
@@ -1074,7 +1074,7 @@ nav {
     justify-content: flex-end;
     align-items: flex-end;
     padding-right: 8vw;
-    padding-bottom: 15vw;
+    padding-bottom: 17vw;
     font-size: 18vw;
     z-index: 9999;
     font-family: myFont;
